--- a/RoomDBSample/app/src/main/res/layout/activity_main.xml
+++ b/RoomDBSample/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/event_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/add_event_btn"
+        app:layout_constraintBottom_toTopOf="@+id/action_add"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
