--- a/UnitCoverter/app/src/main/res/layout/activity_to_kilogram.xml
+++ b/UnitCoverter/app/src/main/res/layout/activity_to_kilogram.xml
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toBottomOf="@+id/poundsTitle" />
 
     <Button
-        android:id="@+id/convertBtn"
+        android:id="@+id/convertBtnKG"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
