--- a/UnitCoverter/app/src/main/res/layout/activity_to_kilometer.xml
+++ b/UnitCoverter/app/src/main/res/layout/activity_to_kilometer.xml
@@ -53,7 +53,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/convertBtn"
+        android:id="@+id/convertBtnKM"
         android:layout_width="87dp"
         android:layout_height="44dp"
         android:layout_marginTop="32dp"
