--- a/UnitCoverter/app/src/main/res/layout/activity_to_celcius.xml
+++ b/UnitCoverter/app/src/main/res/layout/activity_to_celcius.xml
@@ -50,6 +50,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="ºC"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fahrenheit_input" />
